react-slick-carousel setup

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         <title>EC</title>
     </head>
     <body>
+        <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
         <div id="root"></div>
         <!--
       This HTML file is a template.
